--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,30 @@
 * {
-    color: blue;
+    background-color: beige;
+}
+
+.main li,
+.caption,
+h1,
+a {
+    text-align: center;
+    display: block;
+}
+
+h1 {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 175px;
+    width: auto;
+}
+
+a {
+    font-weight: 100;
+    font-size: 20px;
+    display: block;
 }
